--- a/moneda.html
+++ b/moneda.html
@@ -9,42 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <title>Moneda al aire</title>
     <link rel="icon" href="img/ico.png">
-
-
-<style>
-h1{
-    font-family: 'Montserrat', sans-serif;
-}
-h2{
-    font-family: 'Montserrat', sans-serif;
-    font-style: italic;
-}
-
-
-    #contenedor{
-        margin-left: 25%;
-        margin-right: 25%;
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        border-radius: 30px;
-        border: 2px solid black;
-    }
-    #contenedor button{
-        margin-top: 20px;
-        margin-bottom: 20px;
-    }
-    #contenedor img{
-        width: 300px;
-    }
-    .presentacion{
-        margin-left: 20px;
-        margin-right: 20px;
-        text-align: center;
-    }
-
-</style>
-
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js" type="text/javascript" defer></script>
 </head>
 
 <body>
@@ -57,34 +23,5 @@ h2{
     </div>
 
 
-
-
-
-
-
-
-    <script>
-    var boton = document.getElementById("btn");
-    var imagen = document.getElementById("image");
-    var txt = document.getElementById("txt");
-
-    boton.addEventListener("click", () => {
-        imagen.src = "img/loading.gif";
-        txt.innerHTML = "La moneda está girando...";
-        setTimeout(function () {
-        var numeroRandom = Math.round(Math.random() * (1-0)+1);
-        if (numeroRandom == 1){
-            console.log ("cara")
-            txt.innerHTML = "Cara"
-            image.src = "img/cara.png"
-        } else {
-            console.log ("ceca")
-            txt.innerHTML = "Ceca"
-            image.src = "img/ceca.png"
-        }
-    }, 1000);
-    });
-    
-    </script>
 </body>
 </html>
